--- a/docs/fluxus.texi
+++ b/docs/fluxus.texi
@@ -13,9 +13,13 @@
 * LocalState:: LocalState
 * Maths:: Maths
 * PrimitiveData:: PrimitiveData
+* Primitives:: Primitives
 * Turtle:: Turtle
+* UtilFunctions:: UtilFunctions
 * OSC:: OSC
-* Camera:: Camera
+* CanvasCamera:: CanvasCamera
+* Canvas:: Canvas
+* CanvasInput:: CanvasInput
 @end menu
 @node Audio
 @chapter Audio
@@ -363,14 +367,14 @@ Sets the frame and zbuffer clearing on or off.
 
 @end lisp
 
-@section (get-camera-transform)
+@section (get-camera)
 @subsubheading Returns
 matrix-vector
 @subsubheading Description
-Gets the current camera transform matrix.
+Gets the current camera transform matrix. This is the low level function, use get-camera-transform instead.
 @subsubheading Example
 @lisp
- (get-camera-transform) 
+ (get-camera) 
 
 @end lisp
 
@@ -1448,7 +1452,7 @@ Conjugatea a quaternion.
 
 @node PrimitiveData
 @chapter PrimitiveData
-Primitive data (pdata for short) is fluxus' name for data which comprises primitives. In polygon primitives this means the vertex information, in particle primitives it corresponds to the particle information, in NURBS primitives it's the control vertices. Access to pdata gives you the ability to use primitives which are otherwise not very interesting, and deform and shape other primitives to give much more detailed models and animations. You can also add your own pdata, which is treated exactly like the built in types. Primitive data is named by type strings, the names of which depend on the sort of primitive.
+Primitive data (pdata for short) is fluxus' name for data which comprises primitives. In polygon primitives this means the vertex information, in particle primitives it corresponds to the particle information, in NURBS primitives it's the control vertices. Access to pdata gives you the ability to use primitives which are otherwise not very interesting, and deform and shape other primitives to give much more detailed models and animations. You can also add your own pdata, which is treated exactly like the built in types. Primitive data is named by type strings, the names of which depend on the sort of primitive. All pdata commands operate on the currently grabbed primitive.
 @subsubheading Example
 @lisp
  ; a function to deform the points of an object
@@ -1487,6 +1491,108 @@ Writes to the corresponding pdata element.
 @subsubheading Example
 @lisp
  (pdata-get "p" 1)
+
+@end lisp
+
+@section (pdata-add type-string name-string)
+@subsubheading Returns
+void
+@subsubheading Description
+Adds a new user pdata array. Type is one of "v":vector, "c":colour, "f":float or "m":matrix.
+@subsubheading Example
+@lisp
+ (pdata-add "v" "mydata")
+ (pdata-set "mydata" 0 (vector 1 2 3))
+
+@end lisp
+
+@section (pdata-op funcname-string pdataname-string operator)
+@subsubheading Returns
+void
+@subsubheading Description
+This is an experimental feature allowing you to do operations on pdata very quickly, for instance adding element for element one array of pdata to another. You can implement this in Scheme as a loop over each element, but this is slow as the interpreter is doing all the work. It's much faster if you can use a pdata-op as the same operation will only be one Scheme call.
+@subsubheading Example
+@lisp
+ (pdata-op "+" "mydata" (vector 1 2 3))  add a vector to all the pdata vectors
+ (pdata-op "+" "mydata" "myotherdata")  add two pdata vectors element for element
+ (pdata-op "*" "mydata" (vector 1 2 3))  multiply a vector to all the pdata vectors
+ (pdata-op "*" "mydata" "myotherdata")  multiply two pdata vectors element for element
+ (pdata-op "closest" "p" (vector 100 0 0))  returns position of the closest vertex to this point
+ (pdata-op "sin" "mydata" "myotherdata")  sine of one float pdata to another
+ (pdata-op "cos" "mydata" "myotherdata")  cosine of one float pdata to another
+
+@end lisp
+
+@section (pdata-copy pdatafrom-string pdatato-string)
+@subsubheading Returns
+void
+@subsubheading Description
+Copies the contents of one pdata array to another. Arrays must match types.
+@subsubheading Example
+@lisp
+ (pdata-copy "p" "mydata")  copy the vertex positions to a user array
+
+@end lisp
+
+@section (pdata-size)
+@subsubheading Returns
+count-number
+@subsubheading Description
+Returns the size of the pdata arrays (they must all be the same). This is mainly used for iterating over the arrays.
+@subsubheading Example
+@lisp
+ (define (mashup n)
+     (pdata-set "p" n (vector (flxrnd) (flxrnd) (flxrnd))) ; randomise the vertex position
+     (if (zero? n)
+         0
+         (mashup (- n 1)))) ; loops till n is 0
+
+ (define shape (build-sphere 10 10))
+ (grab shape)
+ (mashup (pdata-size)) ; randomise verts on currently grabbed primitive
+ (ungrab)
+
+@end lisp
+
+@section (finalise)
+@subsubheading Returns
+void
+@subsubheading Description
+Doesn't do anything anymore, I need to remove this :)
+@subsubheading Example
+@lisp
+
+@end lisp
+
+@section (recalc-normals smoothornot-number)
+@subsubheading Returns
+void
+@subsubheading Description
+For polygon primitives only. Looks at the vertex positions and calculates the lighting normals for you automatically. Call with "1" for smooth normals, "0" for faceted normals.
+@subsubheading Example
+@lisp
+ (define shape (build-sphere 10 10)) ; build a sphere (which is smooth by default)
+ (grab shape)
+ (recalc-normals 0) ; make the sphere faceted
+ (ungrab)
+
+@end lisp
+
+@node Primitives
+@chapter Primitives
+Primitive are cool...
+@subsubheading Example
+@lisp
+
+@end lisp
+@section (build-cube)
+@subsubheading Returns
+primitiveid-number
+@subsubheading Description
+Builds a new cube
+@subsubheading Example
+@lisp
+ (define mynewcube (build-cube))
 
 @end lisp
 
@@ -1643,6 +1749,103 @@ When attached, sets the absolute pdata index the turtle is writing to.
 
 @end lisp
 
+@node UtilFunctions
+@chapter UtilFunctions
+Handy functions to make your life easier...
+@subsubheading Example
+@lisp
+
+@end lisp
+@section (time)
+@subsubheading Returns
+time-number
+@subsubheading Description
+Returns the number of seconds (+ fraction) since midnight January 1st 1970. This is the simpest animation source for your scripts.
+@subsubheading Example
+@lisp
+ (define (animate)
+     (rotate (sin (time)) 0 0)
+     (draw-cube))
+ (every-frame (animate))    
+
+@end lisp
+
+@section (delta)
+@subsubheading Returns
+time-number
+@subsubheading Description
+Time in seconds since the last frame. Used to make animation frame rate independant.
+@subsubheading Example
+@lisp
+ (define (animate)
+     (rotate (* (delta) 10) 0 0) 
+     (draw-cube))
+ (every-frame (animate))    
+
+@end lisp
+
+@section (flxrnd)
+@subsubheading Returns
+random-number
+@subsubheading Description
+Returns a random number between 0 and 1
+@subsubheading Example
+@lisp
+ (define (animate)
+     (colour (flxrnd) (flxrnd) (flxrnd)) 
+     (draw-cube))
+ (every-frame (animate))
+
+@end lisp
+
+@section (flxseed seed-number)
+@subsubheading Returns
+void
+@subsubheading Description
+Seeds the random number generator so we can get the same sequence.
+@subsubheading Example
+@lisp
+ (define (animate)
+     (colour (flxrnd) (flxrnd) (flxrnd)) 
+     (draw-cube))
+ (flxseed 10) 
+ (every-frame (animate)) ; the same seqence of colours will be generated
+
+@end lisp
+
+@section (searchpaths paths-list)
+@subsubheading Returns
+void
+@subsubheading Description
+Sets a list of search path strings to use for looking for fluxus related files, such as textures, shaders etc. Paths will be searched in order each time.
+@subsubheading Example
+@lisp
+ (searchpaths (list "/path/to/my/textures" "/path/to/my/other/textures"))
+
+@end lisp
+
+@section (fullpath filename-string)
+@subsubheading Returns
+fullpath-string
+@subsubheading Description
+Searches the search paths for the specified file and returns the first location it finds.
+@subsubheading Example
+@lisp
+ (fullpath "myfile")
+
+@end lisp
+
+@section (framedump filename)
+@subsubheading Returns
+void
+@subsubheading Description
+Saves out the current OpenGL front buffer to disk. Reads the filename extension to decide on the format used for saving, "tif", "jpg" or "ppm" are supported. This is the low level form of the frame dumping, use start-framedump and end-framedump instead.
+@subsubheading Example
+@lisp
+ (framedump "picture.jpg")
+
+@end lisp
+
 @node OSC
 @chapter OSC
 OSC stands for Open Sound Control, and is a widely used protocol for passing data between multimedia applications. Fluxus can send or receive messages.
@@ -1754,9 +1957,9 @@ Sends an osc message with the argument list as the osc data. Only supports float
 
 @end lisp
 
-@node Camera
-@chapter Camera
-Camera functions
+@node CanvasCamera
+@chapter CanvasCamera
+Camera functions availible in the fluxus canvas.
 @subsubheading Example
 @lisp
 
@@ -1772,6 +1975,194 @@ Resets the camera transform, useful if it becomes trashed, or you get lost somew
  (set-camera-transform (vector 123 41832 28 0.2 128 0.001 123 41832 28 0.2 128 0.001 0.2 100 13 1931)) 
  ; set it back to the starting position/orientation
  (reset-camera) 
+
+@end lisp
+
+@section (set-camera-transform transform-matrix)
+@subsubheading Returns
+void
+@subsubheading Description
+Overrides and locks the camera transform with your own. To unlock again call reset-camera
+@subsubheading Example
+@lisp
+ ; ruin the camera transform
+ (set-camera-transform (mtranslate 0 0 -10)) 
+
+@end lisp
+
+@section (get-camera-transform)
+@subsubheading Returns
+transform-matrix
+@subsubheading Description
+Returns the current camera transform. To unlock again call reset-camera
+@subsubheading Example
+@lisp
+ ; ruin the camera transform
+ (define tx (get-camera-transform))
+
+@end lisp
+
+@node Canvas
+@chapter Canvas
+The fluxus canvas is the main application and editor.
+@subsubheading Example
+@lisp
+
+@end lisp
+@section (every-frame callback-function)
+@subsubheading Returns
+void
+@subsubheading Description
+Sets a function to be called every time the render is about to draw a new frame.
+@subsubheading Example
+@lisp
+ (define count 0)
+
+ (define (myfunc)
+     (display count)(display " frames have been rendered!")
+     (newline)
+     (set! count (+ count 1)))
+
+ (every-frame (myfunc)) 
+
+@end lisp
+
+@section (clear)
+@subsubheading Returns
+void
+@subsubheading Description
+Clears out the renderer of all objects and lights. Clears the physics system and resets the every-frame callback. Generally a Good Thing to put this at the beginning of scripts to make sure everything is cleared out each time you execute.
+@subsubheading Example
+@lisp
+ (clear) ; without this we would accumulate a new cube every time F5 was pressed
+ (build-cube) 
+
+@end lisp
+
+@section (start-framedump name-string type-string)
+@subsubheading Returns
+void
+@subsubheading Description
+Starts saving frames to disk. Type can be one of "tif", "jpg" or "ppm". Filenames are built with the frame number added, padded to 5 zeros.
+@subsubheading Example
+@lisp
+ (start-framedump "frame" "jpg") 
+
+@end lisp
+
+@section (end-framedump)
+@subsubheading Returns
+void
+@subsubheading Description
+Stops saving frames to disk.
+@subsubheading Example
+@lisp
+ (end-framedump) 
+
+@end lisp
+
+@node CanvasInput
+@chapter CanvasInput
+Input functions availible in the fluxus canvas.
+@subsubheading Example
+@lisp
+
+@end lisp
+@section (key-pressed key-string)
+@subsubheading Returns
+boolean
+@subsubheading Description
+Returns true if the specified key is currently pressed down.
+@subsubheading Example
+@lisp
+ (if (key-pressed "q") (display "q pressed!))
+
+@end lisp
+
+@section (keys-down)
+@subsubheading Returns
+keys-list
+@subsubheading Description
+Returns a list of keys pressed down
+@subsubheading Example
+@lisp
+ (display (keys-down))
+
+@end lisp
+
+@section (key-special-pressed key-number)
+@subsubheading Returns
+boolean
+@subsubheading Description
+Returns true if the specified special key is currently pressed down. Special keys are ones which do not map to ascii values. The easiest way of finding what they are is to print out the result of key-special-pressed while holding down the key you are after.
+@subsubheading Example
+@lisp
+
+ (if (key-special-pressed 100) (display "left cursor pressed"))
+ (if (key-special-pressed 102) (display "right cursor pressed"))
+ (if (key-special-pressed 101) (display "up cursor pressed"))
+ (if (key-special-pressed 103) (display "down cursor pressed"))
+
+@end lisp
+
+@section (keys-special-down)
+@subsubheading Returns
+keys-list
+@subsubheading Description
+Returns a list of special keys pressed down
+@subsubheading Example
+@lisp
+ (display (keys-special-down))
+
+@end lisp
+
+@section (mouse-x)
+@subsubheading Returns
+coord-number
+@subsubheading Description
+Returns the x position of the mouse
+@subsubheading Example
+@lisp
+ (display (mouse-x))
+
+@end lisp
+
+@section (mouse-y)
+@subsubheading Returns
+coord-number
+@subsubheading Description
+Returns the y position of the mouse
+@subsubheading Example
+@lisp
+ (display (mouse-y))
+
+@end lisp
+
+@section (mouse-button)
+@subsubheading Returns
+boolean
+@subsubheading Description
+Returns true if the specifed mouse button is pressed
+@subsubheading Example
+@lisp
+ (display (mouse-button 1))
+
+@end lisp
+
+@section (mouse-over)
+@subsubheading Returns
+primitiveid-number
+@subsubheading Description
+Returns the object the mouse is currently over.
+@subsubheading Example
+@lisp
+ (grab (mouse-over))
+ (colour (vector 1 0 0)) ; paints objects the mouse is over red
+ (ungrab)
+
+(define (mouse-over)
+	(select (vector-ref mouse 0) (vector-ref mouse 1) 3))
+		
 
 @end lisp
 
