--- a/INSTALL
+++ b/INSTALL
@@ -1,18 +1,19 @@
-Fluxus : (C) 2005 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
+Fluxus : (C) 2007 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
 
-fluxus is a dependancy heavy application
+Fluxus is a dependancy heavy application
 
-requires:
+Requires:
 ode        http://opende.sourceforge.net/
-guile      http://www.gnu.org/software/guile/guile.html
+plt scheme http://www.plt-scheme.org/
 fftw       http://www.fftw.org/
 jack       http://jackit.sourceforge.net/
 libsndfile http://www.mega-nerd.com/libsndfile/
 liblo      http://plugin.org.uk/liblo/
 
-and if that's not enough, you'll also need scons (http://www.scons.org/) to build fluxus
+And if that's not enough, you'll also need scons (http://www.scons.org/) to 
+build fluxus
 
-to build and install, type:
+To build and install, type:
 
 sudo scons install
 
@@ -20,15 +21,17 @@ Build options:
 
 X11=1          : Build with the X11 libraries - rather than Xorg which is 
                  default.
+				 
+MULTITEXTURE=1 : Multitexturing is bad tempered on some drivers - set this to 
+				 enable the multitexturing code.
+				 
+GLSL=0         : Set this to disable GLSL hardware shaders.
 
-MULTITEXTURE=0 : Multitexturing is checked at configure time, but it can cause
-                 crashes on some drivers - set this to disable the 
-				 multitexturing code manually.
-
-building the documentation:
+Building the documentation:
 
 cd docs/
-./builddocs.sh
+sudo ./makedocs.sh
 
-this will make a fluxus directory containing the html docs
+This will make a fluxus directory containing the html docs, and install the 
+fluxus helpmap so you can use the "help" command from within fluxus.
 
