--- a/INSTALL
+++ b/INSTALL
@@ -1,10 +1,11 @@
 Fluxus : (C) 2007 Dave Griffiths : dave at pawfal dot org : www.pawfal.org
+--------------------------------------------------------------------------
 
 Fluxus is a dependancy heavy application
 
 Requires:
 ode        http://opende.sourceforge.net/
-plt scheme http://www.plt-scheme.org/
+plt scheme http://www.plt-scheme.org/ (see below)
 fftw       http://www.fftw.org/
 jack       http://jackit.sourceforge.net/
 libsndfile http://www.mega-nerd.com/libsndfile/
@@ -13,8 +14,25 @@ liblo      http://plugin.org.uk/liblo/
 And if that's not enough, you'll also need scons (http://www.scons.org/) to 
 build fluxus
 
+PLT install instructions
+------------------------
+
+For the moment you need a version of PLT which isn't officially released yet 
+(369.10 or greater), this has bug fixes in which fluxus needs to run correctly. 
+Look on the fluxus website for a source download. If you have an older version 
+of PLT installed already, you'll need to delete the /usr/local/lib/plt directory 
+to uninstall it first. 
+
+./configure --enable-shared --prefix=/usr/local
+make
+sudo make install
+
+Fluxus install instructions
+---------------------------
+
 To build and install, type:
 
+scons 
 sudo scons install
 
 Build options:
@@ -32,6 +50,5 @@ Building the documentation:
 cd docs/
 sudo ./makedocs.sh
 
-This will make a fluxus directory containing the html docs, and install the 
-fluxus helpmap so you can use the "help" command from within fluxus.
+This will make a fluxus directory containing the html docs.
 
